// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logger diagnosticToTerminalLog get error 1`] = `
" ERROR(ESLint)  Unexpected var, use let or const instead.
 FILE  /Users/vite-plugin-checker/playground/eslint/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text
"
`;

exports[`logger diagnosticToTerminalLog get warning 1`] = `
" WARNING(ESLint)  Unexpected var, use let or const instead.
 FILE  /Users/vite-plugin-checker/playground/eslint/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text
"
`;

exports[`logger normalizeEslintDiagnostic get multiple diagnostics 1`] = `
Array [
  Object {
    "checker": "ESLint",
    "codeFrame": "  [0m [90m 1 |[39m [36mimport[39m { text } [36mfrom[39m [32m'./text'[39m[0m
  [0m [90m 2 |[39m[0m
  [0m[31m[1m>[22m[39m[90m 3 |[39m [36mvar[39m hello [33m=[39m [32m'Hello'[39m[0m
  [0m [90m   |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m
  [0m [90m 4 |[39m [36mvar[39m hello1 [33m=[39m [32m'Hello1'[39m[0m
  [0m [90m 5 |[39m[0m
  [0m [90m 6 |[39m [36mconst[39m rootDom [33m=[39m document[33m.[39mquerySelector([32m'#root'[39m)[33m![39m[0m",
    "conclusion": "",
    "id": "/Users/vite-plugin-checker/playground/eslint/src/main.ts",
    "level": 1,
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 3,
      },
      "start": Object {
        "column": 1,
        "line": 3,
      },
    },
    "message": "Unexpected var, use let or const instead.",
    "stripedCodeFrame": "    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 | var hello1 = 'Hello1'
    5 |
    6 | const rootDom = document.querySelector('#root')!",
  },
  Object {
    "checker": "ESLint",
    "codeFrame": "  [0m [90m 2 |[39m[0m
  [0m [90m 3 |[39m [36mvar[39m hello [33m=[39m [32m'Hello'[39m[0m
  [0m[31m[1m>[22m[39m[90m 4 |[39m [36mvar[39m hello1 [33m=[39m [32m'Hello1'[39m[0m
  [0m [90m   |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m
  [0m [90m 5 |[39m[0m
  [0m [90m 6 |[39m [36mconst[39m rootDom [33m=[39m document[33m.[39mquerySelector([32m'#root'[39m)[33m![39m[0m
  [0m [90m 7 |[39m rootDom[33m.[39minnerHTML [33m=[39m hello [33m+[39m text[0m",
    "conclusion": "",
    "id": "/Users/vite-plugin-checker/playground/eslint/src/main.ts",
    "level": 1,
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 4,
      },
      "start": Object {
        "column": 1,
        "line": 4,
      },
    },
    "message": "Unexpected var, use let or const instead.",
    "stripedCodeFrame": "    2 |
    3 | var hello = 'Hello'
  > 4 | var hello1 = 'Hello1'
      | ^^^^^^^^^^^^^^^^^^^^^
    5 |
    6 | const rootDom = document.querySelector('#root')!
    7 | rootDom.innerHTML = hello + text",
  },
]
`;
